# robot-axes-identification

./: .gitignore  CMakeLists.txt  README.md
include/: DataParser.hpp  HelperFunctions.hpp  Identification.hpp
src/: DataParser.cpp  Identification.cpp  main.cpp
tests/: panda.txt  panda_last_invalid.txt  parrot.txt  random_data.txt  test_Identification.cpp
